@@ -60,7 +60,14 @@ USER VISIBLE CHANGES
           http://stackoverflow.com/questions/11359553/how-to-suppress-output-when-using-in-r-data-table
           http://r.789695.n4.nabble.com/Avoiding-print-when-using-tp4643076.html
         * TO DO * Update 2 FAQs.
-
+        
+    o   DT[] now returns DT rather than an error that either i or j must be supplied.
+        So, ending with [] at the console is a convenience to print the result of :=, rather
+        than wrapping with print(); e.g.,
+          DT[i,j:=value]...oops forgot print...[]
+        is the same as :
+          print(DT[i,j:=value])
+          
 
         **********************************************
         **                                          **
